# ElfDependencyWalker

./: CMakeLists.txt  README.md
cmake/: FindElf.cmake
src/: CMakeLists.txt  main.cpp  read_dependencies
src/ElfDependencyReader/: depenedencyreader.cpp  depenedencyreader.h
